--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,14 @@
-server.port=8081
+server.port=8082
 spring.application.name=AI-CRM-Dev
 
 # PostgreSQL DB connection for DEV
-spring.datasource.url=jdbc:postgresql://localhost:5432/ai_crm_dev
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=your_dev_password
+spring.datasource.password=super1234
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
